--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,14 +1,82 @@
 <div class='jumbotron'>
   <section class='container'>
-    <h1>WFT!</h1>
+    <div class="d-flex">
+        <h1 class="p-2">Єднаймося із MOOC</h1>
+        <img src="/img/logo.svg" class="ml-auto  p-2" style="height:48px">
+    </div>
+
   </section>
 </div>
 
 <section class='container'>
   <div class="row">
-<%= MultiJson.dump(@unis) %>
+   <select id="select" width="100%" value="">
+     <option value=""></option>
+   </select>
   </div>
+  <div id="result" class="p-3"></div>
 </section>
 
+<script id="basic_search" type="x-tmpl-mustache">
+<div class="row paper">
+  <h1>{{NameUA}}</h1>
+  <h2>{{NameEN}}</h2>
+
+</div>
+</script>
 <script>
+
+    template = document.getElementById('basic_search').innerHTML;
+    Mustache.parse(template);
+
+  let data =<%= MultiJson.dump(@unis) %>;
+  let select = $.map(data, function (obj) {
+      obj.id = obj.ID;
+      obj.text = obj.NameUA;// || obj.NameEN
+      return obj;
+  });
+
+    function matchCustom(params, data) {
+        // If there are no search terms, return all of the data
+        if ($.trim(params.term) === '') {
+            return data;
+        }
+
+        // Do not display the item if there is no 'text' property
+        if (typeof data.text === 'undefined') {
+            return null;
+        }
+
+        // `params.term` should be the term that is used for searching
+        // `data.text` is the text that is displayed for the data object
+        if (data.text.indexOf(params.term) > -1 || ( data.NameEN && data.NameEN.indexOf(params.term) > -1)) {
+            var modifiedData = $.extend({}, data, true);
+            return modifiedData;
+        }
+
+        // Return `null` if the term should not be displayed
+        return null;
+    }
+
+  $(document).ready(function() {
+      $('#select').select2({
+          data: select,
+          placeholder: 'Виберіть ВНЗ',
+          allowClear: true,
+          matcher: matchCustom,
+          createSearchChoice:function(term, data) {
+              if ( $(data).filter( function() {
+                  return this.text.localeCompare(term)===0;
+              }).length===0) {
+                  return {id:term, text:term};
+              }
+          }
+      }).on('select2:select', function (e) {
+          let value = e.params.data;
+          document.getElementById('result').innerHTML = Mustache.render(template, value);
+          console.log(value);
+      }).on("select2-highlight", function(e) {
+          console.log("highlighted val=" + e.val + " choice=" + e.choice.text);
+      })
+  });
 </script>
