--- a/app/views/greetings.erb
+++ b/app/views/greetings.erb
@@ -1,1 +1,4 @@
-Ok!
+<div class="d-flex align-items-center justify-content-center" style="height: 20rem;">
+  <h1>Запит оброблено</h1>
+  <p>Все буде Укараїна!</p>
+</div>
