--- a/app/views/main.erb
+++ b/app/views/main.erb
@@ -1,33 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk_UA">
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta charset="UTF-8">
+  <title>Coursera for Ukraine</title>
+  <meta name="author" content="Sumy State University, ОМЦТЕН">
+  <link rel="stylesheet" href="<%= f '/css/style.css'%>">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
-  <!-- Bootstrap CSS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-  <link href="/css/style.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-  <script src="/js/mustache.min.js"></script>
-  <%= extra_head.join("\n") %>
+  <script src="<%= f '/js/mustache.min.js'%>"></script>
 </head>
+
 <body>
-<main>
+<header>
+  <div class="header_inner">
+    <div class="header_content">
+      <img src="/img/coursera.svg">
+      <h1>Вибір інституції реагування в Україні</h1>
+    </div>
+    <img src="/img/header_img.png">
+  </div>
+</header>
 
+<div class="edu">
   <%= yield %>
+</div>
 
-</main>
 <footer>
-  <div class="container">
-    &copy; 2022<%= "&ndash;#{Time.now.year}" if Time.now.year != 2022 %>,
-    <a href="https://sumdu.edu.ua">Sumy State University</a>
+  <div class="footer_inner">
+    <a href="#">Виникли проблеми під час реєстрації?</a><br>
+    <a href="#">У вас є інші питання? Наш Довідковий центр може допомогти</a>
   </div>
 </footer>
 
-<!-- jQuery first, then Tether, then Bootstrap JS. -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
