--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,40 +1,140 @@
-
-html {
-    position: relative;
-    min-height: 100%;
-}
-
 body {
-    margin-bottom: 60px;
-    background: #FFF;
+    box-sizing: border-box;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+    height: 100%;
 }
+
+header {
+    max-height: 430px;
+    height: 430px;
+    background-color: #0056D2;
+}
+
+.header_inner:first-child {
+    display: flex;
+    align-self: center;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header_inner {
+    max-width: 59%;
+    display: flex;
+    margin: 0 auto;
+
+}
+
+.header_content {
+    max-width: 470px;
+    max-height: 218px;
+    margin-bottom: 10%;
+}
+
+.header_content img {
+    height: 67px;
+    width: 460px;
+}
+
+.header_content h1 {
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    font-size: 48px;
+    line-height: 130%;
+    margin-top: 40px;
+}
+
+.edudescr {
+    max-width: 59%;
+    margin: 0 auto;
+
+    height: 230px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.edudescr h1 {
+    max-width: 658px;
+
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    line-height: 150%;
+    vertical-align: middle;
+}
+
+.edudescr_title {
+    font-weight: bold;
+    color: #0056D2;
+}
+
+.edufinder {
+    max-width: 1130px;
+    height-min: 160px;
+    background-color: #EBF3FF;
+    margin: 0 auto;
+    padding: 60px 40px 60px 40px;
+}
+
+.edu {
+    min-height: calc(100vh - 2000px);
+}
+
+.row {
+    --bs-gutter-x: 0;
+}
+
 
 footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px; /* Set the fixed height of the footer here */
-    line-height: 60px; /* Vertically center the text there */
+    background-image: url("/img/footer.png");
+    height: 145px;
+    margin-top: 7%;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+
 }
 
-
-form, table {
-    width:100%;
+.footer_inner {
+    height: 100px;
+    max-width: 1110px;
+    display: flex;
+    flex-direction: column;
+    margin-right: 20%;
 }
 
-table * {
-    text-align: center;
+.footer_inner a {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    line-height: 127.69%;
+    color: #0056D2;
+    text-decoration-line: underline;
 }
-.right {text-align: right;}
-.jumbotron {background: #2B47FF; color:#FFBC00;}
 
-#select {width: 100%}
-.btn,h3 {margin-top: 1rem;}
+.btn {
+   border-radius: 0;
+   padding: 2rem;
+}
+.btn-primary {
+    background-color: #0056D2;
+    color: white;
+}
 
-.paper {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    background: white;
-    border: #eceff1 1px solid;
-    padding: 2rem;
-    width: 100%;
+@media (max-width: 1695px) {
+
+    .header_content h1 {
+        font-size: 35px;
+    }
+
+    .header_inner img {
+        height: 70%;
+        width: 70%;
+    }
+
+    .edudescr {
+        max-width: 300px;
+        margin-left: 21%;
+    }
 }
