--- a/app/views/en/main.erb
+++ b/app/views/en/main.erb
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="uk_UA">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Coursera for Ukraine</title>
   <meta name="author" content="Sumy State University, ОМЦТЕН">
+  <link rel="alternate" hreflang="uk" href="https://<%= settings.url%>?lang=uk" />
   <link rel="stylesheet" href="<%= f '/css/style.css'%>">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
@@ -23,7 +24,7 @@
   <div class="header_inner">
     <div class="header_content">
       <img src="/img/coursera.svg">
-      <h1>Вибір інституції реагування в Україні</h1>
+      <h1>Choice of response institution in Ukraine</h1>
     </div>
     <img src="/img/header_img.png">
   </div>
