fix UI for select2

--- a/app/views/en/index.erb
+++ b/app/views/en/index.erb
@@ -77,10 +77,12 @@
 
 <script id="ok" type="x-tmpl-mustache">
   <h1>{{text}}</h1>
-  <div class="row mt-2">Реєстація для Вашого закладу можлива із потшт  &nbsp;<i>ваша-пошта</i>@<strong>{{domain}}</strong></div>
+  <div class="row mt-2">
+  <p>Реєстація для Вашого закладу можлива із потшт  &nbsp;<i>ваша-пошта</i>@<strong>{{domain}}</strong></p>
+  </div>
   <div class="row mt-2">
     <div class="col-sm-12 text-center">
-     <a class="btn btn-secondary" href='{{URL}}'>Перейти до сайту</a>
+     <a class="btn btn-primary" href='{{URL}}'>Перейти до сайту</a>
     </div>
   </div>
 
