All language button

--- a/app/views/uk/main.erb
+++ b/app/views/uk/main.erb
@@ -27,6 +27,7 @@
       <h1>Вибір інституції реагування в Україні</h1>
     </div>
     <img src="/img/header_img.png">
+    <div class="lang" ><a href="/?lang=en">EN</a></div>
   </div>
 </header>
 
