--- a/app/views/en/main.erb
+++ b/app/views/en/main.erb
@@ -27,6 +27,7 @@
       <h1>Choice of response institution in Ukraine</h1>
     </div>
     <img src="/img/header_img.png">
+    <div class="lang" ><a href="/?lang=uk">UA</a></div>
   </div>
 </header>
 
@@ -42,7 +43,6 @@
 </footer>
 
 
-<!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
 </html>
