+ Add sippets for Google Analytics and Rollbar ~ All links to footer

--- a/app/views/en/main.erb
+++ b/app/views/en/main.erb
@@ -37,13 +37,15 @@
 
 <footer>
   <div class="footer_inner">
-    <a href="#">Виникли проблеми під час реєстрації?</a><br>
-    <a href="#">У вас є інші питання? Наш Довідковий центр може допомогти</a>
+    <a href="mailto:eduonlinemon@gmail.com">Problems registering?</a><br>
+    <a href="https://www.coursera.support/s/article/000001666-Coursera-for-Ukraine-Initiative">Do you have other questions? Our Help Center can help.</a>
   </div>
 </footer>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+<%= ga_snippet %>
+<%= rollbar_snippet %>
 </body>
 </html>
 
