+ introduce Program as new page at Googole Table ~ fix 404, 500 pages ~ minor fix in index page

--- a/app/views/en/404.erb
+++ b/app/views/en/404.erb
@@ -1,5 +1,12 @@
 <div class="d-flex align-items-center justify-content-center" style="height: 20rem;">
-  <h1>404</h1>
-  <p>Page not found</p>
-  <p><a href="/">Back to home</a></p>
+  <div class="row">
+    <div class="col">
+      <img src="/img/404.svg" height="200px">
+    </div>
+    <div class="col">
+      <h1>404</h1>
+      <p>Page not found</p>
+      <p><a href="/">Back to home</a></p>
+    </div>
+  </div>
 </div>
