--- a/app/views/en/greetings.erb
+++ b/app/views/en/greetings.erb
@@ -1,4 +1,6 @@
 <div class="d-flex align-items-center justify-content-center" style="height: 20rem;">
-  <h1>Запит оброблено</h1>
-  <p>Все буде Укараїна!</p>
+  <div class="row">
+    <h1>Запит оброблено</h1>
+    <p>Все буде Укараїна!</p>
+  </div>
 </div>
