--- a/app/views/uk/500.erb
+++ b/app/views/uk/500.erb
@@ -1,5 +1,12 @@
 <div class="d-flex align-items-center justify-content-center" style="height: 20rem;">
-  <h1>Г'юстоне, у нас проблема</h1>
-  <p>Проте є хороша новина: ми про неї знаємо та швиденько виправимо</p>
-  <p><a href="/">На головну</a></p>
+  <div class="row">
+    <div class="col">
+      <img src="/img/500.svg" height="200px">
+    </div>
+    <div class="col">
+      <h1>Г'юстоне, у нас проблема</h1>
+      <p>Проте є хороша новина: ми про неї знаємо та швиденько виправимо</p>
+      <p><a href="/">На головну</a></p>
+    </div>
+  </div>
 </div>
