--- a/public/css/style.css
+++ b/public/css/style.css
@@ -160,6 +160,10 @@ footer {
     border-top-color: white !important;
 }
 
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 3rem !important;
+}
+
 
 @media (max-height:1030px){
     .footer{
@@ -192,4 +196,10 @@ footer {
 }
 .lang:hover{
     text-decoration-style: dashed;
+}
+
+input.form-control {
+    border-radius: 0;
+    min-height: 3em;
+    border-color: #0056D2;
 }
