minor fix in templates

--- a/app/views/uk/index.erb
+++ b/app/views/uk/index.erb
@@ -66,7 +66,7 @@
   <div class="row mt-2">
   <div class="col-sm-12 text-center">
     <button type="submit" class="btn btn-primary">Надіслати запит</button>
-    <p>Нам знадобиться до двох тижнів, щоб додати програму.</p>
+    <p>Нам знадобиться до двох днів, щоб додати програму.</p>
   </div>
   </div>
   </form>
