--- a/app/views/uk/main.erb
+++ b/app/views/uk/main.erb
@@ -2,6 +2,7 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Coursera for Ukraine</title>
   <meta name="author" content="Sumy State University, ОМЦТЕН">
   <link rel="stylesheet" href="<%= f '/css/style.css'%>">
