--- a/app/views/en/index.erb
+++ b/app/views/en/index.erb
@@ -67,7 +67,7 @@
   <div class="row mt-2">
   <div class="col-sm-12 text-center">
     <button type="submit" class="btn btn-primary">Send request</button>
-    <p>It will take us up to two weeks to add the program.</p>
+    <p>It will take us up to two days to add the program.</p>
   </div>
   </div>
   </form>
