--- a/app/views/uk/index.erb
+++ b/app/views/uk/index.erb
@@ -76,7 +76,7 @@
   <div class="row mt-2">
   <ul>
     <li>Реєстрація на цю програму можлива з корпоративних email в домені ХХХХХХХХ@xxx.{{domain}}</li>
-    <li>Реєстрaція на цю програму можлива за запрошенням адміністратора вашого зкладу.</li>
+    <li>Реєстрaція на цю програму можлива за запрошенням адміністратора вашого закладу.</li>
   </ul>
   </div>
   <div class="row mt-2">
