--- a/app/views/uk/index.erb
+++ b/app/views/uk/index.erb
@@ -117,7 +117,7 @@
 
 
 <script>
-    let data =<%= MultiJson.dump(@unis) %>;
+    let data =<%= MultiJson.dump(@units) %>;
     let select = $.map(data, function (obj) {
         obj.text = obj.UA;
         return obj;
