--- a/app/views/uk/greetings.erb
+++ b/app/views/uk/greetings.erb
@@ -1,6 +1,6 @@
 <div class="d-flex align-items-center justify-content-center" style="height: 20rem;">
   <div class="row">
     <h1>Запит оброблено</h1>
-    <p>Все буде Укараїна!</p>
+    <p>Все буде Україна!</p>
   </div>
 </div>
